// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person Page component It renders correctly with response Success 1`] = `
<div>
  <div
    class="css-1mxmwia"
  >
    <h1>
      STAR WARS
    </h1>
    <h2>
      Luke Skywalker
    </h2>
  </div>
  <p>
    Birth year: 
    19BBY
  </p>
  <p>
    <i>
      List of producers the person has worked with and how many times.
    </i>
  </p>
  <p>
    Gary Kurtz
    : 
    2
  </p>
  <p>
    George Lucas
    : 
    1
  </p>
  <p>
    Howard G. Kazanjian
    : 
    1
  </p>
  <p>
    Rick McCallum
    : 
    4
  </p>
  <span
    class="css-ht9l73"
  >
    <a
      href="/"
    >
      Back
    </a>
  </span>
</div>
`;

exports[`Person Page component it is calling fetch 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`Person Page component it is fetching with Response error 1`] = `
<div>
  <p>
    [Network] something went wrong!
  </p>
</div>
`;
